# api/notify/restful/notify_restful_swagger.json
@@ -148,7 +148,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/notifications.PostPayload"
+                            "$ref": "#/definitions/github_com_blackhorseya_godine_entity_notification_model.Notification"
                         }
                     }
                 ],
@@ -292,25 +292,6 @@
                 },
                 "user_id": {
                     "description": "UserID is the identifier of the user to whom the notification is sent.",
-                    "type": "string"
-                }
-            }
-        },
-        "notifications.PostPayload": {
-            "type": "object",
-            "required": [
-                "message",
-                "order_id",
-                "to"
-            ],
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "order_id": {
-                    "type": "string"
-                },
-                "to": {
                     "type": "string"
                 }
             }
